--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,22 @@ mysite/extraction_result.sql
 mysite/gpt/chatgpt_tpch_sql.py
 *.iml
 .idea/UnionExtraction.iml
-*.ini
+
+# Virtual Environment
+venv/
+env/
+ENV/
+.venv/
+
+# Python
+*.pyc
+*.pyo
+*.egg-info/
+dist/
+build/
+
+# IDE
+.vscode/
+*.swp
+*.swo
+*~
