--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
-frozenlist
-pandas
+asgiref==3.8.1
+cffi==1.17.1
+cryptography==43.0.3
+Django==4.2.4
+frozenlist==1.4.1
+mpmath==1.3.0
+numpy==2.1.2
+oracledb==2.4.1
+pandas==2.2.3
+psycopg2-binary
+pycparser==2.22
+python-dateutil==2.9.0.post0
+pytz==2024.2
+setuptools==75.2.0
+six==1.16.0
+sqlparse==0.5.1
 sympy==1.4
-mpmath>=0.19
-tabulate
-psycopg2-binary==2.9.9
-oracledb
+tabulate==0.9.0
+tzdata==2024.2
